fix z-index

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -12,6 +12,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 0px 20px;
+    z-index: 99999;
     nav {
       width: 80%;
       text-align: center;
